# smartcloudops-ai

./: .coveragerc  .env.backup  .env.example  .env.production  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS_STATUS_REPORT.md  AUDIT_REPORT.md  BACKEND_AUDIT_REPORT.md  CHANGELOG.md  CI_CD_DEVELOPER_GUIDE.md  CI_CD_OPTIMIZATION_SUMMARY.md  CI_CD_PIPELINE_FIXES.md  CI_CD_README.md  CODEBASE_RECONSTRUCTION_PLAN.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_PROJECT_AUDIT_REPORT.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  CRITICAL_SECURITY_FIXES_SUMMARY.md  DATASET_MANAGER_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_SUCCESS_REPORT.md  DEPLOYMENT_SUCCESS_SUMMARY.md  Dockerfile  Dockerfile.emergency  Dockerfile.production  Dockerfile.production-fix  Dockerfile.production.old  FINAL_5_PERCENT_RESOLUTION.md  FINAL_DEPLOYMENT_READINESS_REPORT.md  FINAL_SUCCESS_REPORT.md  FINAL_SYNTAX_FIX_REPORT.md  FINAL_WORKFLOW_SUMMARY.md  FIXES_APPLIED.md  FIX_SUMMARY_REPORT.md  (+163 more)
.github/: branch-protection.yml  copilot-instructions.md  pull_request_template.md
Frontend/: package.json  vitest.config.ts
alembic/: env.py
analytics/: dashboard.db
app/: .gitkeep  README.md  __init__.py  ai_handler.py  auth.py  auth_module.py  auth_routes.py  beta_api.py  beta_testing.py  chatops_module.py  config.py  database.py  enhanced_ml_api.py  gateway_service.py  god_mode_api.py  main.py  main.py.bak-20250815022343  main_modular.py  main_refactored.py  ml_module.py  ml_service.py  models.py  monitoring_module.py  simple_backend.py  worker.py
backup_deleted_md_files/: PHASE3_COMPLETE.md  PHASE_VALIDATION_REPORT.md  SECURITY_AUDIT_PHASE1.md  SECURITY_DEPLOYMENT_GUIDE.md  SECURITY_FIXES.md  TESTING_PHASE2_PLAN.md  TESTING_PHASE2_STATUS.md  docs_runbooks_phase4-operational-runbooks.md
backup_fake_audit_reports/: AUDIT_REPORT.md
configs/: README.md  deployment.env  env.production  env.production.override  env.secure  env.template  grafana_ai_dashboards.json  nginx-server.conf  nginx.conf  production-deployment.yaml  remediation-rules.yaml  security-alerts.yml
demo/: README.md  docker-compose.demo.yml
docs/: .gitkeep  API_REFERENCE.md  API_REFERENCE_COMPLETE.md  API_REFERENCE_SERVICE_LAYER.md  API_REFERENCE_UPDATED.md  ARCHITECTURE.md  AUDIT_REPORT.md  BETA_TESTING_REPORT.md  CI_CD_GUIDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_UPDATED.md  DEVELOPER_SETUP_GUIDE.md  GETTING_STARTED.md  GITHUB_ACTIONS_FIXES_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  GOD_MODE_GUIDE.md  LOAD_TESTING_REPORT.md  OPS_RUNBOOK.md  PERFORMANCE_TESTING.md  PHASE_3_5_ACTION_PLAN.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_IMPLEMENTATION.md  PHASE_4_PREPARATION.md  PHASE_6_SUMMARY.md  PHASE_7_2_COMPLETION_SUMMARY.md  PHASE_7_3_COMPLETION_SUMMARY.md  PHASE_7_3_IMPLEMENTATION_LOG.md  PHASE_7_COMPLETE_SUCCESS_SUMMARY.md  PRODUCTION_DEPLOYMENT_RUNBOOK.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_VALIDATION_REPORT.md  PROJECT_STATUS.md  README.md  README.md.backup  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_ENHANCED.md  SECURITY_HARDENING_GUIDE.md  USER_GUIDE.md  USER_TUTORIALS.md  (+11 more)
examples/: ml_models.py
frontend_review/: AUDIT_REPORT.md  DATA_CLEANUP_REPORT.md  Dockerfile  FRONTEND_AUDIT_REPORT.md  INTEGRATION_TEST.md  next.config.js  next.config.mjs  (+2 more)
(+578 files in other folders)
